<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Proctice</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="default_txt">默认</string>
    <string name="home_page">首页</string>
    <string name="classify">分类</string>
    <string name="search">搜索</string>
    <string name="person_datum">我的资料</string>
    <string name="more">更多</string>
    <string name="movie_name">碟中碟4</string>
    <string name="movie_grade">8.5分</string>
	<string name="movie_order">集数 ：</string>
	<string name="movie_order_number">37</string>
	<string name="movie_demo">承影之奇艺UIdemo</string>
	<string name="search_text">搜索</string>
	<string name="hot_search">热门搜索</string>
	<string name="search_history">历史搜索</string>
	<string name="clear_search_history">清楚</string>
	
</resources>