<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
  	<LinearLayout
        android:id="@+id/aiqi_search_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/phonetitlebar_bg"
        android:gravity="center" >

        <EditText
            android:id="@+id/aiqi_search_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edittext_search"
            android:drawableLeft="@drawable/edittext_search_image"
            android:hint="@string/default_txt"
            android:paddingLeft="15dip"
            android:textSize="14sp" >
        </EditText>

        <Button
            android:id="@+id/aiqi_search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_search_bg"
            android:text="@string/search_text" />
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_main_tree_bg"
        android:gravity="center_vertical"
        android:paddingLeft="15dip"
        android:text="@string/hot_search"
        android:textColor="#000000"
        android:textSize="18sp" />

    <GridView
        android:id="@+id/aiqi_serach_hot_search_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="3dip"
        android:layout_weight="1"
        android:horizontalSpacing="50dip"
        android:numColumns="2"
        android:listSelector="@drawable/list_seletor_translate" 
        android:scrollbars="none">
    </GridView>

    <LinearLayout
        android:id="@+id/aiqi_serach_Layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_main_tree_bg"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="15dip"
            android:text="@string/search_history"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/aiqi_serach_btn_clear_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:background="@drawable/search_history_clear_btn_bg"
            android:text="@string/clear_search_history"
            android:textColor="#ffffff" />
    </LinearLayout>

    <GridView
        android:id="@+id/aiqi_serach_history_search_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="3dip"
        android:layout_weight="1"
        android:horizontalSpacing="50dip"
        android:numColumns="2"
        android:listSelector="@drawable/list_seletor_translate" 
        android:scrollbars="none">
    </GridView>
  	
</LinearLayout>
