<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/aiqi_expand_list_child_layout"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
 		android:background="@drawable/expand_list_child_indecator"
        android:clickable="true" >

        <ImageView
            android:id="@+id/aiqi_expand_list_child_left_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dip"
            android:adjustViewBounds="true"
            android:src="@drawable/video_cover_default"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/aiqi_expand_list_child_mid_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            tools:ignore="NestedWeights" >

            <TextView
                android:id="@+id/aiqi_expand_list_child_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:text="@string/movie_name"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <LinearLayout
                android:id="@+id/aiqi_expand_list_child_rating_group_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/aiqi_expand_list_child_rating_img0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ratingbar_full_filled"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/aiqi_expand_list_child_rating_img1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ratingbar_full_filled"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/aiqi_expand_list_child_rating_img2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ratingbar_full_filled"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/aiqi_expand_list_child_rating_img3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ratingbar_full_filled"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/aiqi_expand_list_child_rating_img4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ratingbar_full_empty"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/aiqi_expand_list_child_rating_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dip"
                    android:text="@string/action_settings" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/aiqi_expand_list_child_movie_order_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/aiqi_expand_list_child_movie_order_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_order" />

                <TextView
                    android:id="@+id/aiqi_expand_list_child_movie_order_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_order_number" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/aiqi_expand_list_child_movie_play_btn_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/expand_list_child_play_indecator"
        tools:ignore="ContentDescription" 
        />

</LinearLayout>